# autotest_frame

./: .gitignore  README.md  config.yaml  conftest.py  main.bat  pyproject.toml  pytest.ini  run.py  run_task.py  uv_env.bat
base/: ui2_base.py
baseutil/: ui2_base.py
common/: common_api.py  feishu_api.py  log.py  read_parse.py  send_report.py  task_info.py  ui2_util.py
data/: android_element.py  mobile_phone_element.py
libs/official_models/PP-OCRv5_server_det/: README.md
libs/official_models/PP-OCRv5_server_rec/: README.md
page/: android_page.py  oppo_page.py
pages/: oppo_page.py
testcase/test_smoke/: conftest.py  test_appcenter.py
testcase/test_smoke/test_phone/test_appcenter/: test_appcenter_file_manager.py  test_appcenter_music.py  test_appcenter_oppo_video.py  test_appcenter_setting.py  test_appcenter_soft_store.py  test_appcenter_theme_store.py
testcase/test_smoke/test_phone/test_convenient_bar/: test_wifi_bar.py
tools/allure-2.35.1/plugins/screen-diff-plugin/static/: index.js
tools/imgmonitor/: __init__.py  base.py  detector.py
tools/report_depend/: generate_report.py
util/: common.py  common_service.py  handler.py  log.py  read_parse.py  setter.py
